kustomize/k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tech-deployment
  labels:
    app: teamtech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamtech
  template:
    metadata:
      labels:
        app: teamtech
        # annotations:
        #   prometheus.io/scrape: 'true'
        #   prometheus.io/port: '9113'
    spec:
      containers:
      - name: nginx
        image: devops2022.azurecr.io/tech:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/
      - name: nginx-prometheus-exporter
        image: nginx/nginx-prometheus-exporter
        args:
        - '-nginx.scrape-uri=https://tech.devops2022.de/nginx_status'          
        ports:
        - containerPort: 9113
      volumes:
        - configMap:
      #       # defaultMode: 420
            name: nginx-config
      #     name: nginx-config
