kustomize/k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: hello-world
  labels:
    app: teamtech
spec:
  type: LoadBalancer
  ports:
  - name: teamtech
    port: 80 
    targetPort: 80
  # - name: nginx-prometheus-exporter
  #   port: 9113
  #   targetPort: 9113
  # - name: https
  #   port: 443
  #   targetPort: 443
  selector:
    app: teamtech
