kustomize/k8s/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  spec:
  type: LoadBalancer
  ports:
  - port: 30200
  selector:
    app: pgadmin
