kustomize/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
  - name: postgres
    port: 5432
    nodePort: 30432
  type: NodePort
selector:
  type: LoadBalancer
