kustomize/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-ingress
  annotations:
    # cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/rewrite-target: /tim/$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.org/redirect-to-https: "false"

spec:
  # tls:
  #   - hosts:
  #     - devops2022.de
  #     secretName: tim-prod-tls
  rules:
  - host: devops2022.de
    http:
        paths:
        - pathType: Prefix
          path: "/tech"
          backend:
            service:
              name: hello-world
              port:
                number: 80
